--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-<h1> test </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <title>All about me</title>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+   <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" type="text/css" href="mainstyle.css">
+   <script src="js.js"></script>
+   <link rel="shortcut icon" href="images/logoico.ico" />
+</head>
+
+<body id="body-style" style="max-width: 100vw">
+
+   <div class="corner-ribbon bottom-right sticky red shadow">Test Ribon</div>
+
+   <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
+      <div class="container-fluid">
+         <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">
+               <img class="img-responsive logoimg" src="images/128cclogo.png" />
+            </a>
+         </div>
+         <div>
+            <ul class="nav navbar-nav">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="#">Page 0</a></li>
+               <li><a href="#">Page 1</a></li>
+               <li><a href="#">Page 2</a></li>
+            </ul>
+         </div>
+      </div>
+      <!--container fluid//-->
+   </nav>
+   <!--add test picture here//-->
+   <!--<img src="images/backtest1.jpg"/>-->
+   <div>
+      <div class="thumb1">
+         <div id="welcome" style="max-width: 450px;">
+            <h1>Hello and Welcome</h1>
+            <hr/>
+            <p>This is some filler/dummy text until I figure out what to write here. <a href="http://www.fallingfalling.com/" class="text-link">And this a link.</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus vulputate elementum. </p>
+            <br/>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll myButton">Jump In</a>
+         </div>
+
+         <div id="side-buttons">
+            <div>
+               <a href="https://www.facebook.com/DigitalReset"><img src="images/side/facebook-side1.png" id="side-facebook"/></a>
+            </div>
+            <div>
+               <a href="https://twitter.com/CinderBlock33"><img src="images/side/twitter-side1.png" id="side-twitter"/></a>
+            </div>
+            <div>
+               <a href="https://play.google.com/store/search?q=pub:Digital Reset"><img src="images/side/google-side1.png" id="side-google"/></a>
+            </div>
+         </div>
+      </div>
+   </div>
+   <section id="about">
+
+   </section>
+</body>
+
+</html>
