--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <div>
             <ul class="nav navbar-nav">
                <li><a href="index.html">Home</a></li>
-               <li><a href="#">Page 0</a></li>
+               <li><a href="test.html">Page 0</a></li>
                <li><a href="#">Page 1</a></li>
                <li><a href="#">Page 2</a></li>
             </ul>
