--- a/index.html
+++ b/index.html
@@ -2,52 +2,57 @@
 <html lang="en">
 
 <head>
-   <title>All about me</title>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-   <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
-   <link rel="stylesheet" type="text/css" href="mainstyle.css">
-   <script src="js.js"></script>
-   <link rel="shortcut icon" href="images/logoico.ico" />
+    <title>All about me</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="mainstyle.css">
+    <script src="js.js"></script>
+    <link rel="shortcut icon" href="images/logoico.ico" />
 </head>
 
 <body id="body-style" style="max-width: 100vw">
 
-   <div class="corner-ribbon bottom-right sticky red shadow">Test Ribon</div>
+    <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
 
-   <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
-      <div class="container-fluid">
-         <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
-               <img class="img-responsive logoimg" src="images/128cclogo.png" />
-            </a>
-         </div>
-         <div>
-            <ul class="nav navbar-nav">
-               <li><a href="index.html">Home</a></li>
-               <li><a href="test.html">Page 0</a></li>
-               <li><a href="#">Page 1</a></li>
-               <li><a href="#">Page 2</a></li>
-            </ul>
-         </div>
-      </div>
-      <!--container fluid//-->
-   </nav>
-   <!--add test picture here//-->
-   <!--<img src="images/backtest1.jpg"/>-->
-   <div>
-      <div class="thumb1">
-         <div id="welcome" style="max-width: 450px;">
-            <h1>Hello and Welcome</h1>
-            <hr/>
-            <p>This is some filler/dummy text until I figure out what to write here. <a href="http://www.fallingfalling.com/" class="text-link">And this a link.</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus vulputate elementum. </p>
-            <br/>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll myButton">Jump In</a>
-         </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive logoimg" src="images/128cclogo.png" />
+                </a>
+            </div>
+            <div>
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="#" class="nav-link">Page 0</a></li>
+                    <li><a href="#" class="nav-link">Page 1</a></li>
+                    <li><a href="#" class="nav-link">Page 2</a></li>
+                </ul>
+            </div>
+        </div>
+        <!--container fluid//-->
+    </nav>
+    <!--add test picture here//-->
+    <!--<img src="images/backtest1.jpg"/>-->
+    <div>
+        <div class="thumb1">
+            <div id="welcome" style="max-width: 450px;">
+                <div class="hex-container">
+                    <div class="hexagon"></div>
+                </div>
+                <h1>Cristian Cioanca</h1>
+                <hr/>
+                <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
+                <br/>
+                <a href="#about" class="nav-link read-more">read more</a>
+                <!--btn btn-primary btn-xl page-scroll myButton-->
+            </div>
 
+            <!--
          <div id="side-buttons">
             <div>
                <a href="https://www.facebook.com/DigitalReset"><img src="images/side/facebook-side1.png" id="side-facebook"/></a>
@@ -59,11 +64,27 @@
                <a href="https://play.google.com/store/search?q=pub:Digital Reset"><img src="images/side/google-side1.png" id="side-google"/></a>
             </div>
          </div>
-      </div>
-   </div>
-   <section id="about">
+-->
+        </div>
+    </div>
+    <section id="about">
 
-   </section>
+    </section>
+    <div class="wrap">
+        <div class="social">
+            <div class="inline github-div">
+               <a href="#" class="icon">
+                <img class="github-icon" src="images/side/github-bottom1.png"></img>
+               </a>
+            </div>
+            <div class="inline in-div">
+               <a href="#" class="icon">
+                <img class="in-icon" src="images/side/in-bottom1.png"></img>
+               </a>
+            </div>
+            <br class="clearBoth" />
+        </div>
+    </div>
 </body>
 
 </html>
