--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <script src="js.js"></script>
-    <link rel="shortcut icon" href="images/logoico.ico" />
+    <link rel="shortcut icon" href="images/logo2.ico" />
 </head>
 
 <body id="body-style" style="max-width: 100vw">
@@ -22,15 +22,14 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                    <img class="img-responsive logoimg" src="images/128cclogo.png" />
+                    <img class="img-responsive logoimg" src="images/logo2.png" />
                 </a>
             </div>
             <div>
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#" class="nav-link">Page 0</a></li>
+                    <li><a href="#blueprints" class="nav-link">Page 0</a></li>
                     <li><a href="#" class="nav-link">Page 1</a></li>
-                    <li><a href="#" class="nav-link">Page 2</a></li>
                 </ul>
             </div>
         </div>
@@ -48,7 +47,7 @@
                 <hr/>
                 <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
                 <br/>
-                <a href="#about" class="nav-link read-more">read more</a>
+                <a href="#blueprints" class="nav-link read-more">read more</a>
                 <!--btn btn-primary btn-xl page-scroll myButton-->
             </div>
 
@@ -67,18 +66,18 @@
 -->
         </div>
     </div>
-    <section id="about">
+    <section id="blueprints">
 
     </section>
     <div class="wrap">
         <div class="social">
             <div class="inline github-div">
-               <a href="#" class="icon">
+               <a href="https://github.com/ccioanca" class="icon">
                 <img class="github-icon" src="images/side/github-bottom1.png"></img>
                </a>
             </div>
             <div class="inline in-div">
-               <a href="#" class="icon">
+               <a href="https://www.linkedin.com/in/cristian-cioanca-68a8a9a7" class="icon">
                 <img class="in-icon" src="images/side/in-bottom1.png"></img>
                </a>
             </div>
