changed nav to be responsive

--- a/index.html
+++ b/index.html
@@ -18,14 +18,26 @@
 
     <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
+        <!--<div class="container-fluid">
             <div class="navbar-header">
+
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
+
+
+
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <a class="navbar-brand" href="index.html">
                     <img class="img-responsive logoimg" src="images/logo2.png" />
                 </a>
-            </div>
-            <div>
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="#blueprints" class="nav-link">Page 0</a></li>
@@ -33,7 +45,39 @@
                 </ul>
             </div>
         </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+        </div>
+
+
+
+
+
+        </div>-->
         <!--container fluid//-->
+        
+      <a class="navbar-brand pull-left" href="index.html">
+        <img class="img-responsive logoimg" src="images/logo2.png" />
+      </a>
+        <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav" style="float: right !important;">
+        <li class="menu-half nav-link"><a href="#"><span></span>Home</a></li>
+        <li class="menu-half nav-link"><a href="#"><span></span>Blueprints</a></li>
+        <li class="menu-half nav-link"><a href="#"><span></span>About</a></li>
+      </ul>
+    </div>
+  </div>
+        
     </nav>
     <!--add test picture here//-->
     <!--<img src="images/backtest1.jpg"/>-->
@@ -69,6 +113,7 @@
     <section id="blueprints">
 
     </section>
+    <!--
     <div class="wrap">
         <div class="social">
             <div class="inline github-div">
@@ -82,6 +127,26 @@
                </a>
             </div>
             <br class="clearBoth" />
+        </div>
+    </div>
+-->
+    <div class="links-bar">
+        <div class="ico1">
+            <a href="https://github.com/ccioanca" class="icon">
+                <img class="github-icon" style="height: 48px;" src="images/side/github-bottom1.png"></img>
+            </a>
+        </div>
+
+        <div class="ico2">
+            <a href="https://www.linkedin.com/in/cristian-cioanca-68a8a9a7" class="icon">
+                <img style="height: 48px;" class="in-icon" src="images/side/in-bottom1.png"></img>
+            </a>
+        </div>
+
+        <div class="ico3">
+            <a href="#">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Red_information_icon_with_gradient_background.svg/48px-Red_information_icon_with_gradient_background.svg.png" />
+            </a>
         </div>
     </div>
 </body>
