perliminaries and first page complete

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" style="float: right !important;">
-        <li class="menu-half nav-link"><a href="#"><span></span>Home</a></li>
-        <li class="menu-half nav-link"><a href="#"><span></span>Blueprints</a></li>
-        <li class="menu-half nav-link"><a href="#"><span></span>About</a></li>
+        <li class="menu-half"><a href="index.html" class="nav-link"><span></span>Home</a></li>
+        <li class="menu-half"><a href="#blueprints" class="nav-link"><span></span>Blueprints</a></li>
+        <li class="menu-half"><a href="" class="nav-link"><span></span>About</a></li>
       </ul>
     </div>
   </div>
@@ -91,7 +91,7 @@
                 <hr/>
                 <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
                 <br/>
-                <a href="#blueprints" class="nav-link read-more">read more</a>
+                <a href="#blueprints" class="text-link read-more">read more</a>
                 <!--btn btn-primary btn-xl page-scroll myButton-->
             </div>
 
