--- a/index.html
+++ b/index.html
@@ -12,51 +12,14 @@
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <script src="js.js"></script>
     <link rel="shortcut icon" href="images/logo2.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 </head>
 
 <body id="body-style" style="max-width: 100vw">
 
     <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
 
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">
-        <!--<div class="container-fluid">
-            <div class="navbar-header">
-
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Brand</a>
-            </div>
-
-
-
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <a class="navbar-brand" href="index.html">
-                    <img class="img-responsive logoimg" src="images/logo2.png" />
-                </a>
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#blueprints" class="nav-link">Page 0</a></li>
-                    <li><a href="#" class="nav-link">Page 1</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-        </div>
-
-
-
-
-
-        </div>-->
-        <!--container fluid//-->
-        
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">        
       <a class="navbar-brand pull-left" href="index.html">
         <img class="img-responsive logoimg" src="images/logo2.png" />
       </a>
@@ -67,7 +30,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" style="float: right !important;">
@@ -77,10 +39,7 @@
       </ul>
     </div>
   </div>
-        
     </nav>
-    <!--add test picture here//-->
-    <!--<img src="images/backtest1.jpg"/>-->
     <div>
         <div class="thumb1">
             <div id="welcome" style="max-width: 450px;">
@@ -92,44 +51,12 @@
                 <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
                 <br/>
                 <a href="#blueprints" class="text-link read-more">read more</a>
-                <!--btn btn-primary btn-xl page-scroll myButton-->
             </div>
-
-            <!--
-         <div id="side-buttons">
-            <div>
-               <a href="https://www.facebook.com/DigitalReset"><img src="images/side/facebook-side1.png" id="side-facebook"/></a>
-            </div>
-            <div>
-               <a href="https://twitter.com/CinderBlock33"><img src="images/side/twitter-side1.png" id="side-twitter"/></a>
-            </div>
-            <div>
-               <a href="https://play.google.com/store/search?q=pub:Digital Reset"><img src="images/side/google-side1.png" id="side-google"/></a>
-            </div>
-         </div>
--->
         </div>
     </div>
-    <section id="blueprints">
-
-    </section>
-    <!--
-    <div class="wrap">
-        <div class="social">
-            <div class="inline github-div">
-               <a href="https://github.com/ccioanca" class="icon">
-                <img class="github-icon" src="images/side/github-bottom1.png"></img>
-               </a>
-            </div>
-            <div class="inline in-div">
-               <a href="https://www.linkedin.com/in/cristian-cioanca-68a8a9a7" class="icon">
-                <img class="in-icon" src="images/side/in-bottom1.png"></img>
-               </a>
-            </div>
-            <br class="clearBoth" />
-        </div>
+    <div id="blueprints" style="position: absolute">
+        <div class="blueprint-box" style="width:150px; height: 150px;">TEST</div>
     </div>
--->
     <div class="links-bar">
         <div class="ico1">
             <a href="https://github.com/ccioanca" class="icon">
