--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav" style="float: right !important;">
-        <li class="menu-half"><a href="index.html" class="nav-link"><span></span>Home</a></li>
+        <li class="menu-half"><a href="/" class="nav-link"><span></span>Home</a></li>
         <li class="menu-half"><a href="#blueprints" class="nav-link"><span></span>Blueprints</a></li>
         <li class="menu-half"><a href="" class="nav-link"><span></span>About</a></li>
       </ul>
