--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <title>All about me</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="mainstyle.css">
-    <script src="js.js"></script>
+    <link rel="stylesheet" type="text/css" href="Styles/mainstyle.css">
     <link rel="shortcut icon" href="images/logo2.ico" />
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
 </head>
 
@@ -51,32 +46,18 @@
                 <hr/>
                 <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
                 <br/>
-                <a href="#blueprints" class="text-link read-more">read more</a>
             </div>
         </div>
     </div>
     <div id="blueprints" style="position: absolute">
         <div class="blueprint-box" style="width:150px; height: 150px;">TEST</div>
     </div>
-    <div class="links-bar">
-        <div class="ico1">
-            <a href="https://github.com/ccioanca" class="icon">
-                <img class="github-icon" style="height: 48px;" src="images/side/github-bottom1.png"></img>
-            </a>
-        </div>
 
-        <div class="ico2">
-            <a href="https://www.linkedin.com/in/cristian-cioanca-68a8a9a7" class="icon">
-                <img style="height: 48px;" class="in-icon" src="images/side/in-bottom1.png"></img>
-            </a>
-        </div>
 
-        <div class="ico3">
-            <a href="#">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Red_information_icon_with_gradient_background.svg/48px-Red_information_icon_with_gradient_background.svg.png" />
-            </a>
-        </div>
-    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="Scripts/js.js"></script>
 </body>
-
 </html>
