--- a/index.html
+++ b/index.html
@@ -5,38 +5,16 @@
     <title>All about me</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="Styles/mainstyle.css">
+    <link id="theme" data-theme="dark" rel="stylesheet" type="text/css" href="Styles/css/minified/dark-theme.min.css">
     <link rel="shortcut icon" href="images/logo2.ico" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     
 </head>
 
-<body id="body-style" style="max-width: 100vw">
+<body style="width: 100%; height: 100vh;">
 
-    <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
-
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top navbar-custom nav-no-scroll">        
-      <a class="navbar-brand pull-left" href="index.html">
-        <img class="img-responsive logoimg" src="images/logo2.png" />
-      </a>
-        <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav" style="float: right !important;">
-        <li class="menu-half"><a href="/" class="nav-link"><span></span>Home</a></li>
-        <li class="menu-half"><a href="#blueprints" class="nav-link"><span></span>Blueprints</a></li>
-        <li class="menu-half"><a href="" class="nav-link"><span></span>About</a></li>
-      </ul>
-    </div>
-  </div>
-    </nav>
-    <div>
+    <!-- <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div> -->
+    <!-- <div>
         <div class="thumb1">
             <div id="welcome" style="max-width: 450px;">
                 <div class="hex-container">
@@ -48,12 +26,9 @@
                 <br/>
             </div>
         </div>
-    </div>
-    <div id="blueprints" style="position: absolute">
-        <div class="blueprint-box" style="width:150px; height: 150px;">TEST</div>
-    </div>
+    </div> -->
 
-
+    <button id="theme-btn">Change Theme</button>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
