--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="width: 100%; height: 100vh;">
 
-    <!-- <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div> -->
+    <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
     <!-- <div>
         <div class="thumb1">
             <div id="welcome" style="max-width: 450px;">
