--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link id="theme" data-theme="dark" rel="stylesheet" type="text/css" href="Styles/css/minified/dark-theme.min.css">
     <link rel="shortcut icon" href="images/logo2.ico" />
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-    
+    <script src="https://kit.fontawesome.com/7c0c5e5a06.js" crossorigin="anonymous"></script>
 </head>
 
 <body style="width: 100%; height: 100vh;">
@@ -28,11 +27,15 @@
         </div>
     </div> -->
 
-    <button id="theme-btn">Change Theme</button>
+    <!-- <button id="theme-btn">Change Theme</button> -->
+    <a href="#" id="theme-btn">
+        <span class="fa-stack fa-2x">
+            <i class="far fa-lightbulb"></i>
+            <i class="fas fa-lightbulb" style="display: none;"></i>
+        </span>
+    </a>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="Scripts/js.js"></script>
 </body>
 </html>
