--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <!-- <button id="theme-btn">Change Theme</button> -->
     <a href="#" id="theme-btn">
         <span class="fa-stack fa-2x">
-            <i class="far fa-lightbulb"></i>
-            <i class="fas fa-lightbulb" style="display: none;"></i>
+            <!-- <i class="far fa-lightbulb"></i>
+            <i class="fas fa-lightbulb" style="display: none;"></i> -->
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun" style="display: none;"></i>
         </span>
     </a>
 
