--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body style="width: 100%; height: 100vh;">
 
+    <div class="hamburger-menu">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </div>
+
+
     <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
     <!-- <div>
         <div class="thumb1">
@@ -37,7 +44,23 @@
         </span>
     </a>
 
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="Scripts/js.js"></script>
 </body>
+
+<script>
+        //mock function for hamburger menu
+    $('.hamburger-menu').click(function(e){
+        var $this = $(this);
+        
+        $this.toggleClass('forwards');
+        if(!$this.hasClass('forwards'))
+            $this.addClass('backwards');
+        else
+            $this.removeClass('backwards');
+
+    })
+</script>
 </html>
