--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body style="width: 100%; height: 100vh;">
 
     <div class="hamburger-menu">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
 
@@ -54,13 +55,7 @@
         //mock function for hamburger menu
     $('.hamburger-menu').click(function(e){
         var $this = $(this);
-        
-        $this.toggleClass('forwards');
-        if(!$this.hasClass('forwards'))
-            $this.addClass('backwards');
-        else
-            $this.removeClass('backwards');
-
+        $this.toggleClass('open');
     })
 </script>
 </html>
