manrope font and hex image

--- a/index.html
+++ b/index.html
@@ -19,21 +19,8 @@
         <span></span>
     </div>
 
-
+<!-- RIBBON  -->
     <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
-    <!-- <div>
-        <div class="thumb1">
-            <div id="welcome" style="max-width: 450px;">
-                <div class="hex-container">
-                    <div class="hexagon"></div>
-                </div>
-                <h1>Cristian Cioanca</h1>
-                <hr/>
-                <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
-                <br/>
-            </div>
-        </div>
-    </div> -->
 
     <!-- <button id="theme-btn">Change Theme</button> -->
     <a href="#" id="theme-btn">
@@ -44,6 +31,16 @@
             <i class="fas fa-sun" style="display: none;"></i>
         </span>
     </a>
+
+    <div id="welcome" style="max-width: 450px;">
+        <div class="hex-container">
+            <div class="hexagon"></div>
+        </div>
+        <h1>Cristian Cioanca</h1>
+        <hr/>
+        <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
+        <br/>
+    </div>
 
 
 
