better nav menu

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </span>
     </a>
 
-    <div id="welcome" style="max-width: 450px;">
+    <!-- <div id="welcome" style="max-width: 450px;">
         <div class="hex-container">
             <div class="hexagon"></div>
         </div>
@@ -40,7 +40,7 @@
         <hr/>
         <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
         <br/>
-    </div>
+    </div> -->
 
 
 
