removed a bunch of unneeded legacy files. and imported the new logo. +new me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link id="theme" data-theme="dark" rel="stylesheet" type="text/css" href="Styles/css/minified/dark-theme.min.css">
-    <link rel="shortcut icon" href="images/logo2.ico" />
+    <link rel="shortcut icon" href="images/cLogoBW.ico" />
+    <!-- TODO:// This'll need to go when custom icons are in -->
     <script src="https://kit.fontawesome.com/7c0c5e5a06.js" crossorigin="anonymous"></script>
 </head>
 
@@ -38,7 +39,7 @@
         </div>
         <h1>Cristian Cioanca</h1>
         <hr/>
-        <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
+        <p>A software developer with the creativity of a designer.</p>
         <br/>
     </div>
 
