--- a/stream-modules/timer-down.html
+++ b/stream-modules/timer-down.html
@@ -11,13 +11,69 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
   <style>
-    body{
+    /* body{
+      background-color: gray;
       font-family: 'Lato', sans-serif;
-    }
+      color: white;
+    } */
+
+    /* .timer{
+      display: block;
+      font-size: 80px;
+      text-shadow: #343253 0 7px 0;
+      width: 100%;
+      text-align: center;
+    } */
   </style>
 </head>
-10
 <body>
+  <span class="timer"><span id="minutes">00</span>:<span id="seconds">00</span></span>
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script>
+    const mQP = "minutes";
+    const sQP = "seconds";
+    $(document).ready(function(){
+      urlParams = new URLSearchParams(window.location.search);
+      var minutes = urlParams.get(mQP) || 1;
+      var seconds = urlParams.get(sQP) || 0;
+
+      $("#minutes").html(pad(minutes, 2));
+      $("#seconds").html(pad(seconds, 2));
+
+      var countDown = function(){
+        if(minutes == 0 && seconds == 0)
+          return;
+
+        seconds--;
+        console.log(seconds);
+        
+        if(seconds < 0 && minutes > 0){
+          seconds = 59;
+          minutes--;
+          $("#minutes").html(pad(minutes, 2));
+          $("#seconds").html(pad(seconds, 2));
+        }
+        else if(seconds < 0 && minutes == 0)
+        {
+          //display different message
+          $(".timer").html("Starting Shortly");
+        }
+        else{
+          $("#minutes").html(pad(minutes, 2));
+          $("#seconds").html(pad(seconds, 2));
+        }
+      }
+
+      setInterval(countDown, 1000);
+    });
+
+    function pad (str, max) {
+      str = str.toString();
+      return str.length < max ? pad("0" + str, max) : str;
+    }
+
+
+  </script>
 </body>
 </html>
