dont display seconds.

--- a/stream-modules/LDTimer.html
+++ b/stream-modules/LDTimer.html
@@ -36,7 +36,7 @@
   <span class="timer">
     <span id="hour-container"><span id="hours">00</span></span>
     <span id="minute-container">: <span id="minutes">00</span></span>
-    <span id="second-container" style="">: <span id="seconds">00</span></span>
+    <span id="second-container" style="display: none;">: <span id="seconds">00</span></span>
   </span>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
