--- a/stream-modules/LDTimer.html
+++ b/stream-modules/LDTimer.html
@@ -34,21 +34,25 @@
 </head>
 <body>
   <span class="timer">
-    <span id="hour-container"><span id="hours">00</span></span>
-    <span id="minute-container">: <span id="minutes">00</span></span>
+    <span id="hour-container"><span id="hours">00</span> :</span>
+    <span id="minute-container"><span id="minutes">00</span></span>
     <span id="second-container" style="display: none;">: <span id="seconds">00</span></span>
   </span>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="../Scripts/stream-common.js"></script>
   <script>
-    const hQP = "hours";
-    const mQP = "minutes";
-    const sQP = "seconds";
+    const startDateQP = "startdate";
+    // const endDateQP = "enddate";
+    const hQP = "addHours";
     $(document).ready(function(){
-      var ldEndtime = new Date(2021, 03, 25, 21, 0, 0); //Apr 25 9pm - 2021, 03, 25, 21, 0, 0
-    //   console.log("LD:  " + ldEndtime);
-    //   console.log("Now: " + Date.now());
+      urlParams = new URLSearchParams(window.location.search);
+
+      var ldEndtime = new Date(urlParams.get(startDateQP));//new Date(2021, 03, 25, 21, 0, 0); //Apr 25 9pm - 2021, 03, 25, 21, 0, 0
+      ldEndtime.setHours(parseInt(ldEndtime.getHours()) + parseInt(urlParams.get(hQP)));
+      //console.log(parseInt(ldEndtime.getHours()) + parseInt(urlParams.get(hQP)));
+      console.log("LD:  " + ldEndtime);
+      console.log("Now: " + Date.now());
       var dateDiff = ldEndtime - Date.now();
 
       var seconds = Math.floor(dateDiff / 1000);
