--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <title>All about me</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link id="theme" data-theme="dark" rel="stylesheet" type="text/css" href="Styles/css/minified/dark-theme.min.css">
-    <link rel="shortcut icon" href="images/logo2.ico" />
-    <script src="https://kit.fontawesome.com/7c0c5e5a06.js" crossorigin="anonymous"></script>
-</head>
-
-<body style="width: 100%; height: 100vh;">
-
-    <div class="hamburger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
-<!-- RIBBON  -->
-    <div class="corner-ribbon bottom-right sticky red shadow">Site in Beta!</div>
-
-    <!-- <button id="theme-btn">Change Theme</button> -->
-    <a href="#" id="theme-btn">
-        <span class="fa-stack fa-2x">
-            <!-- <i class="far fa-lightbulb"></i>
-            <i class="fas fa-lightbulb" style="display: none;"></i> -->
-            <i class="fas fa-moon"></i>
-            <i class="fas fa-sun" style="display: none;"></i>
-        </span>
-    </a>
-
-    <!-- <div id="welcome" style="max-width: 450px;">
-        <div class="hex-container">
-            <div class="hexagon"></div>
-        </div>
-        <h1>Cristian Cioanca</h1>
-        <hr/>
-        <p>I am a software developer. Most of my time revolves around the sweet sweet embrace of C#</p>
-        <br/>
-    </div> -->
-
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="Scripts/js.js"></script>
-</body>
-
-<script>
-        //mock function for hamburger menu
-    $('.hamburger-menu').click(function(e){
-        var $this = $(this);
-        $this.toggleClass('open');
-    })
-</script>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>my-portfolio</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
